feat(dataupdate): 添加任务执行历史监控页面
- 新增 TaskRunHistory 组件作为任务监控页面入口
- 在路由配置中添加 /task-monitor 路径映射
- 在图标映射中注册任务监控页面路径
- 后端新增通知配置实体类和配置服务
- 更新通知服务以支持数据库配置和测试功能
- 在数据更新请求中添加触发类型字段
- 实现任务执行历史记录的插入和状态回填
- 添加任务执行超时控制和强杀机制
- 实现孤儿任务扫描和自动清理功能
- 优化定时任务执行流程并统一异常处理
- 添加数据库初始数据确保菜单项存在
- 新建任务历史 API 接口文件